--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			
 		 <div class="bg-nav">
 			 <div  class="logo">
-				<img src="assets/svg/vsAsset 4.svg" alt="logo"/>
+				<img src="svg/vsAsset 4.svg" alt="logo"/>
 			
 			</div>
 			 <a class="but1" href="#">Get the app
@@ -29,9 +29,9 @@
 			<div class="bg-1">
 			<h1>A NEW WAY FOR SAVE YOUR <div class="ex">SOUL<h2>An app that help you to realise your goals</h2></div></h1>
 			<div class="bttn">
-				<a class="btt1" href="#" > <img src="assets/img/appstore.png" alt="appstore"/>
+				<a class="btt1" href="#" > <img src="img/appstore.png" alt="appstore"/>
 				</a>
-				<a class="btt1" href="#" > <img src="assets/img/googleplay.png" alt="google"/>
+				<a class="btt1" href="#" > <img src="img/googleplay.png" alt="google"/>
 				</a>
 			</div>
 			
@@ -43,34 +43,34 @@
 			<div class="slider">
 				<div class="slide-track">
 				<div  class="slide">
-					<img src="assets/img/group_264.png" alt="1"/>
+					<img src="img/group_264.png" alt="1"/>
 				</div>
 				<div  class="slide" style="margin-top: 200px;">
-					<img src="assets/img/group_265.png" alt="2"/>
+					<img src="img/group_265.png" alt="2"/>
 				</div>
 				<div  class="slide">
-					<img src="assets/img/group_266.png" alt="3"/>
+					<img src="img/group_266.png" alt="3"/>
 				</div>
 				<div  class="slide" style="margin-top: 200px;">
-					<img src="assets/img/group_267.png" alt="4"/>
+					<img src="img/group_267.png" alt="4"/>
 				</div>
 				<div  class="slide">
-					<img src="assets/img/group_268.png" alt="5"/>
+					<img src="img/group_268.png" alt="5"/>
 				</div>
 				<div  class="slide" style="margin-top: 200px;">
-					<img src="assets/img/group_269.png" alt="6"/>
+					<img src="img/group_269.png" alt="6"/>
 				</div>
 				<div  class="slide">
-					<img src="assets/img/group_270.png" alt="7"/>
+					<img src="img/group_270.png" alt="7"/>
 				</div>
 				<div class="slide" style="margin-top: 200px;">
-					<img src="assets/img/group_271.png" alt="8"/>
+					<img src="img/group_271.png" alt="8"/>
 				</div>
 				<div  class="slide">
-					<img src="assets/img/group_272.png" alt="9"/>
+					<img src="img/group_272.png" alt="9"/>
 				</div>
 				<div  class="slide" style="margin-top: 200px;">
-					<img src="assets/img/group_270.png" alt="10"/>
+					<img src="img/group_270.png" alt="10"/>
 				</div>
 			
 			
@@ -93,15 +93,15 @@
 	
 	<div class="ima">
 		  <div class="card-h1">
-			  <img src="assets/img/group_299.png" alt="how1"/>
+			  <img src="img/group_299.png" alt="how1"/>
 		  </div>
 		  
 		  <div class="card-h1">
-			  <img src="assets/img/group_300.png" alt="how1"/>
+			  <img src="img/group_300.png" alt="how1"/>
 		  </div>
 		  
 		  <div class="card-h1">
-			  <img src="assets/img/group_301.png" alt="how1"/>
+			  <img src="img/group_301.png" alt="how1"/>
 		  </div>
 	</div>
 	
@@ -112,30 +112,30 @@
 	</div>
 	
 			<div class="bttn2">
-				<a class="btt2" href="#" > <img src="assets/img/appstore.png" alt="appstore"/>
+				<a class="btt2" href="#" > <img src="img/appstore.png" alt="appstore"/>
 				</a>
-				<a class="btt2" href="#" > <img src="assets/img/googleplay.png" alt="google"/>
+				<a class="btt2" href="#" > <img src="img/googleplay.png" alt="google"/>
 				</a>
 			</div>
-	<div class="card-v"><video src="assets/img/vsoul-reel-2.mp4" autoplay muted loop/></div>
+	<div class="card-v"><video src=img/vsoul-reel-2.mp4" autoplay muted loop/></div>
 	<div class="emp-2"></div>
 		
 	<div class="foot">
 		  <h5>Download now</h5>
 		<div class="bttn2">
-				<a class="btt2" href="#" > <img src="assets/img/appstore.png" alt="appstore"/>
+				<a class="btt2" href="#" > <img src="img/appstore.png" alt="appstore"/>
 				</a>
-				<a class="btt2" href="#" > <img src="assets/img/googleplay.png" alt="google"/>
+				<a class="btt2" href="#" > <img src="img/googleplay.png" alt="google"/>
 				</a>
 			</div>
 		<div class="line"></div>
 		<div class="social">
-		<div class="logofo"><img  src="assets/svg/group_279.svg" alt="logofooter"/></div>
+		<div class="logofo"><img  src="svg/group_279.svg" alt="logofooter"/></div>
 		
-		<div class="sm1"><img  src="assets/svg/group_281.svg" alt="sm1"/>
+		<div class="sm1"><img  src="svg/group_281.svg" alt="sm1"/>
 		</div>
 		
-		<div class="sm2"><img  src="assets/svg/group_284.svg" alt="sm2"/>
+		<div class="sm2"><img  src="svg/group_284.svg" alt="sm2"/>
 		</div>
 			</div>
 		<div class="textlt"><h5>©2023 | All rights reserved</h5><a href="#"><h6>Privacy Policy</h6></a><a href="#"><h7>Terms of Service</h7></a></div>
